# my-openenv

./: .env.sample  .gitignore  Dockerfile  README.md  confest.py  inference.py  openenv.yaml  pyproject.toml  requirements-inference.txt  requirements.runtime.txt  requirements.txt
env/: environment.py  models.py  reward.py  utils.py
fixtures/task1/: instance_001.json  instance_002.json  instance_003.json  instance_004.json  instance_005.json
fixtures/task2/: instance_001.json  instance_002.json  instance_003.json  instance_004.json  instance_005.json
fixtures/task3/: instance_001.json  instance_002.json  instance_003.json  instance_004.json  instance_005.json
fixtures/task4/: instance_001.json  instance_002.json  instance_003.json  instance_004.json  instance_005.json
graders/: grader1.py  grader2.py  grader3.py  grader4.py  graders.py
scripts/: generate_fixtures.py  validate_fixtures.py
server/: app.py  session.py
tasks/: task1.py  task2.py  task3.py  task4.py  task_base.py
tests/: test_baseline.py  test_env.py  test_environment.py  test_graders.py  test_models.py
