[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-paperbench"
version = "0.1.0"
description = "OpenEnv PaperBench Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4.0",
    "openenv-core>=0.2.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "openai>=1.30.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["env*", "tasks*", "graders*", "server*"]
exclude = ["fixtures*", "tests*"]